# moltbook-session

./: .gitignore  AGENTS.md  ANALYSIS_AUDIT.md  CLAIM_AUDIT.md  Document1.docx  FINAL_QA_REPORT.md  FORECAST_MODEL_CONTEXT_HANDOFF.md  Moltbook.pptx  Presentation1.pptx  README.md  SLIDE_SYSTEM_DECISION.md  VERIFICATION_REPORT.md  package.json  pyproject.toml  requirements.txt
analyses/: ai_trends.py  forecast_model.py  forecast_model_v2.py  token_usage.py
content/: 00-screenshots-gallery.md  01-intro.md  02-ai-agents.md  03-agents-md.md  04-kritiek.md  05-trends.md  06-forecast.md  07-slot.md  08-bronnen-qa-spreekspiekbrief.md  README.md
data/: ai_trends_metrics.json  forecast_scenarios.json  token_usage_assumptions.json
docs/: PUBLIC_RELEASE_REPORT.md  README.md
docs/model_audit/: FLOOR_JUSTIFICATION_FRAMEWORK.md  MODEL_AUDIT_COMPLETE.md  MODEL_V2_DESIGN.md  MODEL_V2_FORMAL_SPECIFICATION.md  README.md  ablation_results.json  ablation_study.py  ablation_validation_report.md  audit_data.json  generate_audit_data.py  generate_audit_plots.py
docs/qa/: FINAL_PRESENTATION_POLISH_REPORT.md  FINAL_QA_REPORT.md  PRESENTATION_REDESIGN_REPORT.md
docs/qa/previews/: preview-metadata.json
docs/verification/: ANALYSIS_AUDIT.md  CLAIM_AUDIT.md  README.md  SLIDE_SYSTEM_DECISION.md  VERIFICATION_REPORT.md
output/: moltbook-content.html  moltbook-supporting-notes.html
qa/previews/: preview-metadata.json
release/: Moltbook.pptx
scripts/: build_content_pdf.sh  build_deck.ts  build_docs_pdf.sh  export_slide_previews.py  pptx-brand.ts
slides/: slides-main.md
