[project]
name = "moltbook-session"
version = "0.1.0"
description = "Verification and slide-generation workspace for the Moltbook session."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "matplotlib>=3.10,<4",
    "numpy>=2.2,<3",
    "pandas>=2.2,<3",
    "python-docx>=1.1,<2",
    "python-pptx>=1.0,<2",
    "scipy>=1.15,<2",
]

[tool.uv]
default-groups = []
